--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
-  "name": "gepg-emulator",
-  "version": "1.0.0",
+  "name": "gepgfun",
+  "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "./out/index.js",
+  "description": " Gepg emulator, for testing gepg payment and control number generating.",
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js serve",
     "dev": "npx tsx watch index.ts serve"
+  },
+  "bin": {
+    "gepgfun": "out/index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mikemasam/gepgfun.git"
   },
   "keywords": [],
   "author": "",
