--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "gepgfun",
-  "version": "0.0.1",
+  "version": "0.0.11",
   "description": "",
-  "main": "./out/index.js",
+  "main": "dist/index.js",
   "description": " Gepg emulator, for testing gepg payment and control number generating.",
   "scripts": {
     "build": "tsc",
@@ -10,7 +10,7 @@
     "dev": "npx tsx watch index.ts serve"
   },
   "bin": {
-    "gepgfun": "out/index.js"
+    "gepgfun": "dist/index.js"
   },
   "repository": {
     "type": "git",
