--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "gepgfun",
-  "version": "0.0.11",
-  "description": "",
+  "version": "0.0.114",
+  "description": " Gepg emulator, for testing gepg payment/ bill cancellation and control number generating.",
   "main": "dist/index.js",
-  "description": " Gepg emulator, for testing gepg payment and control number generating.",
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js serve",
@@ -16,16 +15,23 @@
     "type": "git",
     "url": "https://github.com/mikemasam/gepgfun.git"
   },
-  "keywords": [],
+  "keywords": [
+    "gepg",
+    "gepg payment",
+    "gepg test",
+    "tanzania"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "minimist": "^1.2.8",
     "xml2js": "^0.6.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/minimist": "^1.2.2",
     "@types/xml2js": "^0.4.11"
   }
 }
