--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gepgfun",
-  "version": "0.0.117",
+  "version": "0.0.119",
   "description": " Gepg emulator, for testing gepg payment/ bill cancellation and control number generating.",
   "main": "dist/index.js",
   "scripts": {
@@ -24,6 +24,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "minimist": "^1.2.8",
