--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/minimist": "^1.2.2",
-    "@types/xml2js": "^0.4.11"
+    "@types/xml2js": "^0.4.11",
+    "typescript": "^5.9.3"
   }
 }
